Wed Mar 31 11:28:14 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/OBV/TC_Alignment/run_test.pl:
        * tests/OBV/TC_Alignment/server.cpp:
        Pass ior filename through commandline.

Wed Mar 31 09:01:14 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_orb_tests.lst:
          Disabled test for bug#3837 on static builds.

Wed Mar 31 06:51:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:
          Fixed variable not used arnings

Tue Mar 30 19:32:19 UTC 2010  Olli Savia  <ops@iki.fi>

        * examples/Kokyu_dsrt_schedulers/FP_Scheduler.cpp:
        * examples/Kokyu_dsrt_schedulers/MIF_Scheduler.cpp:
        * examples/Kokyu_dsrt_schedulers/MUF_Scheduler.cpp:
        * examples/Kokyu_dsrt_schedulers/fp_example/client.cpp:
        * examples/Kokyu_dsrt_schedulers/fp_example/server.cpp:
        * examples/Kokyu_dsrt_schedulers/mif_example/client.cpp:
        * examples/Kokyu_dsrt_schedulers/mif_example/server.cpp:
        * examples/Kokyu_dsrt_schedulers/muf_example/client.cpp:
        * examples/Kokyu_dsrt_schedulers/muf_example/server.cpp:
        * examples/RTScheduling/MIF_Scheduler/test.cpp:
        * tao/RTScheduling/Current.cpp:
          Fixed compile warnigs on LynxOS 4.2.

Tue Mar 30 19:20:58 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp(create_event_consumer):

          Added a check for exisiting event consumer before creating.
          Since event consumers are created for forward declared
          eventtypes, multiple forward declarations were causing
          'illegal redefinition' diagnostics from the IDL compiler.

Tue Mar 30 18:59:47 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/executor_ami_exs.cpp:

          Added 'this->' to method call on class member in
          generated code.
