@@ -1,3 +1,10 @@
+Wed Mar 31 13:15:05 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_visitor_root/root_cs.cpp:
+        
+          Fixed bug in generation of *A.cpp file when versioning
+          macros are specified.
+
 Wed Mar 31 11:28:14 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * tests/OBV/TC_Alignment/run_test.pl:
